modified page with updated changes.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
+           <!--  <div class="navLogoContainer">
+                <img src="images/Logo.png" class="img-fluid" alt="Responsive image">
+                <p>INSIGHTS AS A SERVICE</p>
+            </div> -->
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a href="#">About</a></li>
@@ -80,12 +84,13 @@
                 <p>Immediate perspective on companies you care about.</p>
             </div>
         </div>
-    </section>
-    <div class="logoBorder">
         <div class="logoColor">
         </div>
-        <img src="images/logoAngleBot.png">
-    </div>
+        <img class="botAngle" src="images/logoAngleBot.png">
+    </section>
+
+        
+
     <div class="productsContainer">
         <h1 class="productsTitle">PRODUCTS</h1>
         <div class="products-background row">
@@ -178,7 +183,7 @@
                 </div>
                 <div class="wrapper">
                     <div>
-                        <p>CGIS Reclassification Why you should Care</p>
+                        <p>CGIS Reclassification &#38; Why you should Care</p>
                     </div>
                     <div>
                         <p>REITS Reclassification Redux</p>
@@ -261,25 +266,25 @@
             <p>INSIGHTS AS A SERVICE</p>
         </div>
         <div class="row">
-            <div class="firstFooterCol col-sm-3">
+            <div class="firstFooterCol col-xs-3">
                 <a>THE DISCERN STORY</a>
                 <a>ENTERPRISE</a>
                 <a>DISCERN SECURITIES/TRADING</a>
                 <a>CAREERS</a>
             </div>
-            <div class="secondFooterCol col-sm-3">
+            <div class="secondFooterCol col-xs-3">
                 <a>CONTACT</a>
                 <a>PEOPLE</a>
                 <a>DATA PARTNERS</a>
                 <a>BLOG</a>
             </div>
-            <div class="thirdFooterCol col-sm-3">
+            <div class="thirdFooterCol col-xs-3">
                 <a>NEWSROOM</a>
                 <a>OFFICES</a>
                 <a>TERMS OF USE</a>
                 <a>REQUEST A DEMO</a>
             </div>
-            <div class="col-sm-3">
+            <div class="col-xs-3">
                 <form method="GET" action="#">
                     <input type="text" placeholder="SEARCH..">
                     <div class="footerSearchIcon"></div>
